recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:1: error: not found: type float
override def run(x:float) {
                   ^