recursion.logo.square.FourSquare.scala.code
override def run(x:float) {
  avance(x)
  droite(90)
  avance(x)
  droite(90)
  avance(x)
}

run(100)
run(100)
run(100)